plugins {
    id 'java'
    id 'jacoco'
    id 'java-library'
    id 'maven-publish'
}

compileJava {

    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

jacocoTestReport {
    dependsOn test // tests are required to run before generating the report
    reports {
        xml.required = false
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('reports/jacoco')
    }
}

group = 'org.rere'
version = '0.0.1'

repositories {
    mavenCentral()
}

java {
    withSourcesJar()
    // and/or analogously use “withJavadocJar()” to get a “javadocJar” task
}

publishing {
    publications {
        library(MavenPublication) {
            from components.java
        }
    }
}

dependencies {

    testImplementation platform('org.junit:junit-bom:5.9.1')
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    implementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.11.4'
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.11.4'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.3'

    // https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy-gradle-plugin
    runtimeOnly group: 'net.bytebuddy', name: 'byte-buddy-gradle-plugin', version: '1.17.0'
    implementation 'net.bytebuddy:byte-buddy:1.17.0'
    // https://mvnrepository.com/artifact/com.squareupup/javapoet
    //implementation group: 'com.squareup.javapoet', name: 'javapoet', version: '0.5.0'
    //Migrate to palantir, if java 11 version is availiable
    implementation group: 'com.squareup', name: 'javapoet', version: '1.13.0'
}

test {
    useJUnitPlatform()
    exclude('**/**IntegrationTests.java')
    finalizedBy jacocoTestReport
}
